Add README, user manual, and documentation requirements
Java 25 is now stated as the canonical JDK rather than a floor, in the README,
TECHNICAL.md §3 and the manual. It is pinned in every CI job and the uberjar
carries Enable-Native-Access in its manifest. No runtime version check: the
aliases already fail fast on an older JVM, and a jar run on one is the
operator's call.

Adds README.md (requirements, quick start, dev commands, doc map, layout) and
docs/MANUAL.md, written for someone who owns STL models rather than someone
reading the code. The manual documents what exists today and marks specified
but unbuilt features with the milestone that delivers them, so a reader can
tell a promise from a capability.

SPEC.md gains §12 making both documents standing merge obligations: any change
to user-facing behaviour updates the manual in the same PR, any change to
setup/build/test updates the README in the same PR, and a milestone is not
complete while its manual section still says "Not yet built". Rationale is
recorded -- this project's specs have already been wrong three times in ways
only measurement caught, and documentation drifts the same way but silently.

Adds a PR template with those obligations as checkboxes.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01L4V1KDzu2YpG98iPP6cXbB